# MyAIStaffSwarm

./: .gitattributes  .gitignore  ComposerChatLog.py  MyAiStaffSwarm.code-workspace  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  TO_DO.md  WorkingNotepadXfer.md  __init__.py  chainlit.md  init_ollama.bat  langgraph.json  main_old.py  main_test.py  pyproject.toml  requirements.txt  run_dev.ps1  run_streamlit.bat  run_streamlit.ps1  run_windows.ps1  startup.sh  test_cli.py
.cursor/rules/: CursorRulesForAI.md  projectrules.mdc  pythonrules.mdc
app/: chat.py  streamlit_app.py  test_calendar.py
characterfile/brRose/: ItTakesAllKinds.txt
common/: auth.py  base_agent.py  check_db.py  database.py  init_db.py  init_db_docker.py  main2.py  models.py
crawler/api/: config.py  rag_endpoints.py  server.py
database/: dev_stack_dock-comp.yml  dev_stack_env.txt  docs_site_pages_table.sql  messages_table.sql  repo_content_table.sql  social_comments_table.sql  supabase_dock-comp.yml  supabase_stack_env,txt  test_site_pages.sql
examples/: AgentSupervisorGraphTemplate.py  Agent_0.py  pydantic_ai_coder.py
services/: __init__.py  ai_agent.py  common_types.py  db_interface.py  db_service.py  db_types.py  document_tools.py  llm_service.py  store_files.py  store_user_info.py  webhook_service.py
tests/: __init__.py  test_sample.py
tools/: __init__.py  agent_swarm_pipe.py  base.py  llm_provider.py  ollama_pipe.py  tool_registry.py
ui/: __init__.py  ai_expert.py  cli_chat.py  custom_ai_expert.py  custom_streamlit.py  streamlit_ui.py  supabase_chat_memory.py
(+159 files in other folders)
