[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MyAiStaffSwarm"
version = "0.1.0"
description = "A modular AI staff swarm for managing agents."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
    "requests"
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"] 